--- a/crlr/templates/base.html
+++ b/crlr/templates/base.html
@@ -1,36 +1,10 @@
-{% load static %}
-{% load bootstrap4 %}                     {# import bootstrap4/bootstrap3 #}
-{% bootstrap_css %}                       {# Embed Bootstrap CSS #}
-{% bootstrap_javascript jquery='full' %}  {# Embed Bootstrap JS+jQuery #}
-{{ form.media }}                          {# Adds date-picker required JS and CSS #}
+
 <!doc-type html>
 <html>
   <head>
-    <title>{% block title %}ARC PO Tracker{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static '/css/styles.css' %}">
+    <title>{% block title %}ARC Appliance Reference{% endblock %}</title>
   </head>
   <body>
-    {% if user.is_authenticated %}
-      <nav class="navbar navbar-expand-sm bg-light">
-        <!-- Links -->
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'home' %}">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'create_po_view' %}">Appliance List</a>
-          </li>
-          <li>
-            <a class="nav-link nav-right" href="{% url 'logout' %}">Logout</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link navbar-right" href="#">({{ user.first_name }} {{ user.last_name }})</a>
-          </li>
-        </ul>
-      </nav>
-    {% endif %}
-    <p>&nbsp;</p>
-    <p class="center pgttl">{% block page_title %}{% endblock %}</p>
     {% block content %}
     replace me
     {% endblock %}
