nav, home view, and dishwashers
added code for a basic nav on the list view, some code to update scrapers for dishwasher, and some default code for the home view.

--- a/crlr/templates/base.html
+++ b/crlr/templates/base.html
@@ -1,8 +1,9 @@
-
+{% load static %}
 <!doc-type html>
 <html>
   <head>
     <title>{% block title %}ARC Appliance Reference{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static '/css/styles.css' %}">
   </head>
   <body>
     {% block content %}
