--- a/crlr/templates/home.html
+++ b/crlr/templates/home.html
@@ -7,5 +7,9 @@
   <div class="menu_tile">
     <a href="{% url 'list_view' 2 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/Gallery/pol_evn128517_181223-59474.jpg" width="250px" /></a>
   </div>
+  <div style="clear:both;" />
+  <div class="menu_tile">
+    <a href="{% url 'list_view' 3 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4922/4922822_sd.jpg" height="170px" /></a>
+  </div>
 </div>
 {% endblock %}
