--- a/crlr/templates/list.html
+++ b/crlr/templates/list.html
@@ -11,6 +11,10 @@
       <a href="{% url 'list_view' 2 %}">Dishwashers</a>
     </div>
   </div>
+  <div style="width:150px; float:left; padding-left:10px; text-align:center;">
+    <a href="{% url 'list_view' 3 %}">Washing Machines</a>
+  </div>
+</div>
   <p>&nbsp;</p>
   <form type="get" action="." style="margin: 0">
       {{ filter_form.as_p }}
