--- a/crlr/templates/home.html
+++ b/crlr/templates/home.html
@@ -11,5 +11,22 @@
   <div class="menu_tile">
     <a href="{% url 'list_view' 3 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/4922/4922822_sd.jpg" height="170px" /></a>
   </div>
+  <div class="menu_tile">
+    <a href="{% url 'list_view' 4 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/5596/5596202_sd.jpg" height="170px" /></a>
+  </div>
+  <div style="clear:both;" />
+  <div class="menu_tile">
+    <a href="{% url 'list_view' 5 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6896/6896863_500x500_sa.jpg" height="170px" /></a>
+  </div>
+  <div class="menu_tile">
+    <a href="{% url 'list_view' 6 %}"><img src="hhttps://pisces.bbystatic.com/image2/BestBuy_US/images/products/1265/1265684_sa.jpg" height="170px" /></a>
+  </div>
+  <div style="clear:both;" />
+  <div class="menu_tile">
+    <a href="{% url 'list_view' 7 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/3265/3265047_sd.jpg" height="170px" /></a>
+  </div>
+  <div class="menu_tile">
+    <a href="{% url 'list_view' 8 %}"><img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/7039/7039049_sa.jpg" height="170px" /></a>
+  </div>
 </div>
 {% endblock %}
