--- a/crlr/templates/list.html
+++ b/crlr/templates/list.html
@@ -14,6 +14,21 @@
   <div style="width:150px; float:left; padding-left:10px; text-align:center;">
     <a href="{% url 'list_view' 3 %}">Washing Machines</a>
   </div>
+  <div style="width:150px; float:left; padding-left:10px; text-align:center;">
+    <a href="{% url 'list_view' 4 %}">Dryers</a>
+  </div>
+  <div style="width:150px; float:left; padding-left:10px; text-align:center;">
+    <a href="{% url 'list_view' 5 %}">Microwaves</a>
+  </div>
+  <div style="width:150px; float:left; padding-left:10px; text-align:center;">
+    <a href="{% url 'list_view' 6 %}">Air Conditioners</a>
+  </div>
+  <div style="width:150px; float:left; padding-left:10px; text-align:center;">
+    <a href="{% url 'list_view' 7 %}">Dehumidifiers</a>
+  </div>
+  <div style="width:150px; float:left; padding-left:10px; text-align:center;">
+    <a href="{% url 'list_view' 8 %}">Vacuums</a>
+  </div>
 </div>
   <p>&nbsp;</p>
   <form type="get" action="." style="margin: 0">
